--- a/IV/package.json
+++ b/IV/package.json
@@ -38,6 +38,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "set-default-browser": "^1.0.1"
   }
 }
