--- a/IV/package.json
+++ b/IV/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "set-default-browser": "^1.0.1"
   }
 }
