--- a/IV/package.json
+++ b/IV/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "chrome": "^0.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -41,6 +42,8 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "set-default-browser": "^1.0.1"
   }
 }
